# code-review-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml
src/: __main__.py
src/application/use_cases/: compare_versions.py  explain_issue.py  quick_check.py  review_code.py
src/core/: container.py
src/core/config/: app.py  http.py  llm.py
src/core/interfaces/: code_analyzer.py  llm_service.py  tool.py
src/domain/entities/: code_review.py
src/domain/services/: code_analyzer.py  llm_service.py
src/infra/http/: http_client.py
src/infra/langchain/: code_report_generator.py  llm_provider.py
src/infra/langchain/tools/: full_review_code.py  quick_check_code.py
src/presentation/api/: router.py
src/presentation/api/v1/: code_review.py
src/tests/unit/: conftest.py
src/tests/unit/domain/services/: code_analyzer_test.py
