[tool.poetry]
name = "code-review-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.25"
langchain-openai = "^0.3.23"
langchain-community = "^0.3.25"
openai = "^1.86.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.1.0"
faiss-cpu = "^1.11.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
